fixed horizontal body overflow

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -3,6 +3,7 @@ header {
     position: fixed;
     z-index: 5;
     top: 0;
+    left: 0;
     border-bottom: 3px groove black;
     background: url("../../../public/images/Sunday-Reading-Under-the-Sea.webp") top / cover no-repeat;
     opacity: 0.9;
