--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
 body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
+    width: 100vw;
 }
 
 img,
